# Auto-ML-Ops

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: Dockerfile.airflow  requirements-airflow.txt
airflow/dags/get_data_raw/: retrain_predict_model.py
data/: features_for_streaming.parquet  model_metrics.parquet  multi_hot_matrix.csv  scraper_config.json
data/lake/features/: features.parquet
data/lake/year=2025/month=11/day=22/: predictions.parquet
data/output/: next_prediction.json
data_lake/logs/: log_train_model_20251122.parquet
helper/: fill_missing_dates.py
models/: registry.json
src/: cli.py
src/api/: app.py
src/core_model/: data_prep.py  features.py  inference.py  inference_next.py  registry.py  train.py
src/dashboard/: app.py
src/ingestion/: data_generator.py  getData.py  scraper_job.py
src/storage/: log_parquet.py  parquet_sink.py  prediction_sink.py  redis_client.py
src/streaming/: consumer_worker.py  faust_worker.py
src/utils/: build_features_parquet.py  build_multi_hot_from_lake.py  evaluate_models.py
