[project]
name = "predict-number"
version = "0.1.0"
description = "Realtime big data prediction system (Kafka + Faust + FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "faust==1.10.4",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "pandas==2.2.2",
    "numpy==2.0.2",
    "scikit-learn==1.5.2",
    "redis==5.1.0",
    "pyarrow==17.0.0",
    "requests>=2.32.5",
    "cryptography>=46.0.3",
    "kafka-python==1.4.7",
]

[tool.uv]
# Bật tính năng build lock file
managed = true

[project.scripts]
api = "cli:run_api"
train = "core_model.train:main"
predict_next = "core_model.inference_next:main"
build_features = "utils.build_features_parquet:main"
# Windows users sometimes accidentally run `--script build\_features` (with a
# backslash) which resolves to a non-existent path. Provide a hyphenated alias
# so `uv run build-features` works without underscores/backslashes.
build-features = "utils.build_features_parquet:main"